use lambda proxy integration code to work with api gateway requests

--- a/conference-manager/serverless.yml
+++ b/conference-manager/serverless.yml
@@ -9,3 +9,7 @@ provider:
 functions:
   hello:
     handler: handler.hello
+    events:
+      - http:
+          path: /hello
+          method: GET
