--- a/react-conference-manager/public/manifest.json
+++ b/react-conference-manager/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Conference Manager",
+  "name": "Conference Manager",
   "icons": [
     {
       "src": "favicon.ico",
