add routes and controller for conferences

--- a/conference-manager/package.json
+++ b/conference-manager/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "serverless-http": "^2.6.0"
+    "serverless-http": "^2.6.0",
+    "uuid": "^8.3.1"
   }
 }
