--- a/react-conference-manager/package.json
+++ b/react-conference-manager/package.json
@@ -44,6 +44,7 @@
         }
       ],
       "no-else-return": "off",
+      "no-nested-ternary": "off",
       "no-shadow": "off",
       "no-unused-vars": "off",
       "object-curly-newline": "off",
