--- a/conference-manager/package.json
+++ b/conference-manager/package.json
@@ -7,5 +7,11 @@
     "express": "^4.17.1",
     "serverless-http": "^2.6.0",
     "uuid": "^8.3.1"
+  },
+  "scripts": {
+    "start": "sls offline start"
+  },
+  "devDependencies": {
+    "serverless-offline": "^6.8.0"
   }
 }
