--- a/conference-manager/serverless.yml
+++ b/conference-manager/serverless.yml
@@ -2,6 +2,9 @@ service: conference-manager
 
 frameworkVersion: '2'
 
+plugins:
+  - serverless-offline
+
 provider:
   name: aws
   runtime: nodejs12.x
