--- a/react-conference-manager/package.json
+++ b/react-conference-manager/package.json
@@ -14,12 +14,12 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "PORT=4000 react-scripts start",
     "build": "PUBLIC_URL=http://hnswave.co/conference-manager/ react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
-    "lint:fix": "eslint src/**/*.js --fix"
+    "lint:fix": "eslint src/**/*.js --fix",
+    "start": "PORT=4000 react-scripts start",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
