add logic for adding talks and attendees

--- a/react-conference-manager/package.json
+++ b/react-conference-manager/package.json
@@ -33,6 +33,7 @@
         "error",
         "as-needed"
       ],
+      "consistent-return": "off",
       "comma-dangle": [
         "error",
         {
